fix spacing

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -366,7 +366,7 @@
                     display: flex;
                     align-items: center;
                     cursor: pointer;
-                    margin: 0 0 2px -5px;
+                    margin: 0 0 2px 0;
                     .cp-app-drive-element {
                         flex: 1;
                         min-width: 0;
